--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -17,7 +17,7 @@
     <header class="container">
         <nav id="navbar">
             <div id="navbar_logo">
-                <a class="" href="#"><img id="navbar_logoParams" src="/img/logo.png" alt=""></a>
+                <a class="" href="/"><img id="navbar_logoParams" src="/img/logo.png" alt=""></a>
             </div>
             <ol id="navbar_containerItems">
                 <li class="navbar_items"><a class="navbar_itemsStyle" href="/">A propos</a></li>
@@ -26,7 +26,7 @@
                 <li class="navbar_items"><a class="navbar_itemsStyle" href="#">Contact</a></li>
             </ol>
             <div id="navbar_itemsButton">
-                <a class="navbar_itemsCV" href="/cv/resume.pdf" target="_blank" rel="noopener noreferrer">CV CHECK</a>
+                <a class="navbar_itemsCV" href="/cv/resume.pdf" target="_blank" rel="noopener noreferrer">Curriculum</a>
             </div>
                 
         </nav>
