--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@ body {
 /* HEADER */
 
 #navbar {
-    padding-top: 1em;
+    padding-top: 2em;
     padding-right: 4em;
     display: flex;
     flex-direction: row;
@@ -42,6 +42,11 @@ body {
 
 }
 
+.navbar_itemsCV:hover {
+    color: black;
+    background-color: #64FFDA;
+}
+
 #navbar_itemsButton {
     display: flex;
     flex-direction: row;
@@ -51,7 +56,7 @@ body {
 
 #navbar_logo {
     align-items: center;
-    padding-right: 67em;
+    padding-right: 65em;
 }
 
 header.container ol {
@@ -75,6 +80,8 @@ li.navbar_items::before {
     gap: 3em;
     align-items: center;
 }
+
+
 
 /* LEFT BAR */
 
