Ajout de la homepage + about

--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link href="https://fonts.cdnfonts.com/css/sf-mono" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/calibre" rel="stylesheet">
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/style.css">
 
@@ -21,8 +22,8 @@
             </div>
             <ol id="navbar_containerItems">
                 <li class="navbar_items"><a class="navbar_itemsStyle" href="/">A propos</a></li>
-                <li class="navbar_items"><a class="navbar_itemsStyle" href="#">Projets</a></li>
                 <li class="navbar_items"><a class="navbar_itemsStyle" href="#">Etudes</a></li>
+                <li class="navbar_items"><a class="navbar_itemsStyle" href="#">Projets</a></li>
                 <li class="navbar_items"><a class="navbar_itemsStyle" href="#">Contact</a></li>
             </ol>
             <div id="navbar_itemsButton">
