--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -3,10 +3,49 @@
 
 <%- include('partials/leftbar') %>
 
-    <div id="content">
-        
+<div id="content_container">
+        <div id="homePage">
+            <h1 class="color_cyan" id="homepage_title">hello world ! Mon nom est :</h1>
+            <p class="color_whitegrey" id="font_change">Landry Sancet. <br> <span class="color_darkgrey">Nous allons chambouler le web.</span> </p>
+            <p class="color_darkgrey" id="homepage_description">Bienvenue sur mon portfolio, celui-ci sera amené à évoluer  au fur à mesure <br> de mon apprentissage. Actuellement en formation  chez O'clock. Je cherche <br> déjà une alternance, un stage ou bien un poste dès à présent.</p>
+            <a class="color1" id="homepage_button" href="">VOIR LES TRAVAUX</a>
+        </div>
+        <div id="about">
+            <h2>Qui suis-je ?</h2>
+            <div id="about_presentation">
+                <div id="about_text" class="color_darkgrey">
+                    <p>Hello, moi c'est <span class="color_cyan">Landry</span>  ! <br> <br> Fort de mon expérience dans le secteur de la relation client et de la vente, j’ai décidé de m’orienter vers un domaine qui m’attire depuis longtemps : <br> <br> <span class="color_cyan">Le développement Web.</span>  <br> <br> Motivé par cette reconversion, ce nouveau départ est enrichi des connaissances et compétences issues de mes expériences professionnelles passées.
+
+                        <br> <br> Mon implication, ma persévérance et mon savoir-être sont de très bons atouts pour cela.
+                        
+                        <br> <br> Les <span class="color_cyan">technologies</span>  avec lequel je travaille : </p>
+                    <ul id="about_technos">
+                        <li class="about_techno_li">JavaScript</li>
+                        <li class="about_techno_li">React</li>
+                        <li class="about_techno_li">Node.js</li>
+                        <li class="about_techno_li" id="wordpressMoove">Wordpress</li>
+                    </ul>
+                </div>
+                <img id="img" src="/img/me.jpg" alt="">
+            </div>
+        </div>
+        <div id="etudes">
+            <h2> Etudes</h2>
+            <div id="etudes_cards">
+                <div class="etudes_card_params">
+                    <img src="" alt="">
+                    <h3></h3>
+                    <p></p>
+                </div>
+                <div class="etudes_card_params">
+                    <img src="" alt="">
+                    <h3></h3>
+                    <p></p>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
+
     
 
     <!-- <%- include('partials/footer') %> -->
