Ajout de la partie contact & formation

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -30,22 +30,39 @@
             </div>
         </div>
         <div id="etudes">
-            <h2> Etudes</h2>
+            <h2> Les formations que j'ai suivi</h2>
             <div id="etudes_cards">
                 <div class="etudes_card_params">
                     <img src="" alt="">
-                    <h3></h3>
-                    <p></p>
+                    <h3 class="color_whitegrey"><span class="color_cyan">Fullstack JavaScript & Spé React </span>&nbsp  - &nbsp O'clock&nbsp  - &nbsp Paris</h3>
+                    <p class="color_darkgrey">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget felis vel ligula convallis ornare. Phasellus quis elementum arcu, ut fringilla elit. </p>
                 </div>
                 <div class="etudes_card_params">
                     <img src="" alt="">
-                    <h3></h3>
-                    <p></p>
+                    <h3 class="color_whitegrey"><span class="color_cyan">BTS Negociation et Relation Client </span>&nbsp - &nbspESUPEC&nbsp -&nbsp Cholet</h3>
+                    <p class="color_darkgrey">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget felis vel ligula convallis ornare. Phasellus quis elementum arcu, ut fringilla elit. </p>
+                </div>
+                <div class="etudes_card_params">
+                    <img src="" alt="">
+                    <h3 class="color_whitegrey"><span class="color_cyan">BAC ES </span>&nbsp -&nbsp Lycée du Pays de Retz&nbsp-&nbsp Pornic</h3>
+                    <p class="color_darkgrey">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget felis vel ligula convallis ornare. Phasellus quis elementum arcu, ut fringilla elit.  </p>
                 </div>
             </div>
         </div>
-    </div>
+        <div id="projets">
+            <h2>Mes projets en cours / terminés </h2>
+            
+        </div>
+        <div id="contact">
+            <h2>Me contacter</h2>
+            <div id="contact_container">
+                <h3 class="color_whitegrey" id="contact_title">A l'écoute d'opportunités</h3>
+                <p class="color_darkgrey">Actuellement en formation, je suis dores et déjà à la recherche d'une alternance, d'un stage ou d'un poste dans le secteur. <br> <br> Discutons-en !   </p>
+                <a class="color1" id="contact_button" href="">Envoyer un pigeon</a>
+            </div>
+        </div>
+        <%- include('partials/footer') %>
+
 
     
 
-    <!-- <%- include('partials/footer') %> -->
