--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -1,6 +1,7 @@
 <footer>
-    <p>Designé et construit par SANCET Landry.</p>
+    <p>Recoded from scratch par SANCET Landry.</p>
 </footer>
+</div>
 
 </body>
 
