--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -21,7 +21,7 @@
                 <a class="" href="/"><img id="navbar_logoParams" src="/img/logo.png" alt=""></a>
             </div>
             <ol id="navbar_containerItems">
-                <li class="navbar_items"><a class="navbar_itemsStyle" href="/">A propos</a></li>
+                <li class="navbar_items"><a class="navbar_itemsStyle" href="#about">A propos</a></li>
                 <li class="navbar_items"><a class="navbar_itemsStyle" href="#">Etudes</a></li>
                 <li class="navbar_items"><a class="navbar_itemsStyle" href="#">Projets</a></li>
                 <li class="navbar_items"><a class="navbar_itemsStyle" href="#">Contact</a></li>
