--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,17 +26,24 @@ color: #CCD6F6;
 /* HEADER */
 
 #navbar {
-    padding-top: 2em;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
     padding-right: 4em;
     display: flex;
     flex-direction: row;
     justify-content: center;
+    width: 100%;
     gap: 3em;
     float: right;
+    position: fixed;
+    background-color: #0A192F;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+    z-index: 50;
+    transition: 0.4s;
 }
 
 #navbar_logoParams {
-    width: 4em;
+    width: 3em;
     height: auto;
 }
 
@@ -177,9 +184,8 @@ li#leftbar_border::after {
 #homePage {
     display: flex;
     flex-direction: column;
-    gap: 2.5em;
-    height: 100vh;
-
+    gap: 2em;
+    height: 75vh;
 }
 
 #homepage_title {
@@ -213,7 +219,9 @@ li#leftbar_border::after {
 /* ABOUT */
 
 #about {
-    height: 100vh;
+    height: 75vh;
+    padding-top: 8em;
+    padding-bottom: 3em;
 }
 
 #about_presentation {
@@ -264,10 +272,12 @@ border-radius: 2em;
     display: flex;
     flex-direction: column;
     padding-left: 5em;
-    height: 100vh;
+    height: 75vh;
     font-family: 'Calibre';
     line-height: 1.2em;
     font-weight: 400;
+    padding-top: 8em;
+    padding-bottom: 10em;
 
 }
 
@@ -290,14 +300,126 @@ border-radius: 2em;
 
 /* PROJETS */
 
-#projets {
-    height: 100vh;
+#projets_title {
     padding-left: 10em;
 }
+
+#projets {
+    height: 100vh;
+    padding-right: 15em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 2em;
+    padding-bottom: 3em;
+}
+.contener_slideshow
+{
+  width:1280px;
+  height:600px;
+  overflow: hidden;
+  position: relative;
+  z-index: 0;
+  background-color: #0A192F;
+  border: #64ffdb 1px solid;
+}
+
+.slideshow_text {
+    text-decoration: none;
+    color: #64FFDA;
+    font-size: 0.9em;
+    width: 10em;
+    padding: 0.4em 0.4em 0.2em 0.4em;
+    border: 1px solid #64FFDA;
+    border-radius: 0.3em;
+    text-align: center;
+    font-family: 'Calibre';
+}
+
+.slideshow_buttonContainer {
+    background-color: #00000021;
+    width: 100%;
+    height: 4em;
+    position:absolute;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.slid_1, .slid_2, .slid_3
+{
+  position: absolute;
+  width:1280px;
+  height:600px;
+}
+.slid_1{left: 0px;}
+.slid_2{left: 1280px;}
+.slid_3{left: 2560px;}
+.contener_slide
+{
+  width: 1280px;
+  height: 600px;
+  left:0px;
+  position: absolute;
+  -webkit-animation-duration: 10s;
+  -webkit-animation-iteration-count:infinite;
+  -webkit-animation-name: anim_slide;
+  -moz-animation-duration: 10s;
+  -moz-animation-iteration-count:infinite;
+  -moz-animation-name: anim_slide;
+  -ms-animation-duration: 10s;
+  -ms-animation-iteration-count:infinite;
+  -ms-animation-name: anim_slide;
+  animation-duration: 10s;
+  animation-iteration-count:infinite;
+  animation-name: anim_slide;
+}
+
+.slideshow_img {
+    width: 1280px;
+    height: 600px;
+    }
+
+@-webkit-keyframes anim_slide 
+{
+    0% {left:0px;}
+    22% {left:-610px;}
+    33% {left:-610px;}
+    45% {left:-1280px;}
+    66% {left:-1280px;}
+    90% {left:-1280px;}
+  }
+@-moz-keyframes anim_slide 
+{
+  0% {left:0px;}
+  22% {left:-610px;}
+  33% {left:-610px;}
+  45% {left:-1280px;}
+  66% {left:-1280px;}
+  90% {left:-1280px;}
+}
+@-ms-keyframes anim_slide 
+{
+    0% {left:0px;}
+    22% {left:-500px;}
+    33% {left:-500px;}
+    45% {left:-610px;}
+    66% {left:-800px;}
+    90% {left:-800px;}
+  }
+@keyframes anim_slide 
+{
+    0% {left:0px;}
+    100% {left:-1280px;}
+}
+
 
 /* CONTACT */
 
 #contact {
+    padding-top: 8em;
     display: flex;
     flex-direction: column;
     height: 75vh;
@@ -310,20 +432,22 @@ border-radius: 2em;
     font-size: 1.7em;
 }
 
-#contact_button {
+input[type="button"] {
     text-decoration: none;
     color: #64FFDA;
     font-size: 0.8em;
     width: 14em;
-    padding: 1.2em;
+    padding: 1em;
     border: 1px solid #64FFDA;
     border-radius: 0.3em;
     text-align: center;
+    background-color: #0A192F;
 }
 
-#contact_button:hover {
+input[type="button"]:hover {
     color: black;
     background-color: #64FFDA;
+    cursor: pointer;
 }
 
 #contact_container {
