--- a/public/css/style.css
+++ b/public/css/style.css
@@ -304,6 +304,12 @@ border-radius: 2em;
     padding-left: 10em;
 }
 
+#projets_subtitle {
+    color: #64FFDA;
+    font-size: 1.2em;
+    color: #7e8499;
+}
+
 #projets {
     height: 100vh;
     padding-right: 15em;
@@ -312,111 +318,44 @@ border-radius: 2em;
     justify-content: center;
     gap: 2em;
     padding-bottom: 3em;
-}
-.contener_slideshow
-{
-  width:1280px;
-  height:600px;
-  overflow: hidden;
-  position: relative;
-  z-index: 0;
-  background-color: #0A192F;
-  border: #64ffdb 1px solid;
+    font-family: 'Calibre';
 }
 
-.slideshow_text {
+
+
+#slider_container {
+    border: #64FFDA 1px solid;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#slider_buttonContainer {
+    padding-top: 0.5em;
+    padding-bottom: 0.8em;
+    display: flex;
+    flex-direction: row;
+    gap: 75em;
+}
+
+.slider_button {
     text-decoration: none;
     color: #64FFDA;
     font-size: 0.9em;
-    width: 10em;
+    width: 1.8em;
     padding: 0.4em 0.4em 0.2em 0.4em;
     border: 1px solid #64FFDA;
     border-radius: 0.3em;
     text-align: center;
     font-family: 'Calibre';
+    background-color: #0A192F;
 }
 
-.slideshow_buttonContainer {
-    background-color: #00000021;
-    width: 100%;
-    height: 4em;
-    position:absolute;
-    bottom: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.slider_button:hover {
+    color: black;
+    background-color: #64FFDA;
+    cursor: pointer;
 }
-
-.slid_1, .slid_2, .slid_3
-{
-  position: absolute;
-  width:1280px;
-  height:600px;
-}
-.slid_1{left: 0px;}
-.slid_2{left: 1280px;}
-.slid_3{left: 2560px;}
-.contener_slide
-{
-  animation-delay: 2s;
-  width: 3840px;
-  height: 600px;
-  left:0px;
-  position: absolute;
-  -webkit-animation-duration: 10s;
-  -webkit-animation-iteration-count:infinite;
-  -webkit-animation-name: anim_slide;
-  -moz-animation-duration: 10s;
-  -moz-animation-iteration-count:infinite;
-  -moz-animation-name: anim_slide;
-  -ms-animation-duration: 10s;
-  -ms-animation-iteration-count:infinite;
-  -ms-animation-name: anim_slide;
-  animation-duration: 15s;
-  animation-iteration-count:infinite;
-  animation-name: anim_slide;
-  
-}
-
-.slideshow_img {
-    width: 1280px;
-    height: 600px;
-    }
-
-@-webkit-keyframes anim_slide 
-{
-    0% {left:0px;}
-    22% {left:-610px;}
-    33% {left:-610px;}
-    45% {left:-1280px;}
-    66% {left:-1280px;}
-    90% {left:-1280px;}
-  }
-@-moz-keyframes anim_slide 
-{
-  0% {left:0px;}
-  22% {left:-610px;}
-  33% {left:-610px;}
-  45% {left:-1280px;}
-  66% {left:-1280px;}
-  90% {left:-1280px;}
-}
-@-ms-keyframes anim_slide 
-{
-    0% {left:0px;}
-    22% {left:-500px;}
-    33% {left:-500px;}
-    45% {left:-610px;}
-    66% {left:-800px;}
-    90% {left:-800px;}
-  }
-@keyframes anim_slide 
-{
-    0% {left:0px;}
-    100% {left:-1280px;}
-}
-
 
 /* CONTACT */
 
